@@ -127,7 +127,8 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.1</version>
         <configuration>
-          <!--                <failIfNoTests>false</failIfNoTests>-->
+          <argLine>--add-opens pizzashop/pizzashop.repository=ALL-UNNAMED</argLine>
+          <argLine>--add-opens pizzashop/pizzashop.controller=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
       <plugin>
